--- a/timer.css
+++ b/timer.css
@@ -1,3 +1,9 @@
+html,body {
+	width: 100%;
+	height: 100%;
+   overflow: hidden;
+}
+
 @-webkit-keyframes blink {
   0% {
    color: #fff;
@@ -13,57 +19,80 @@
   }
 }
 
+@keyframes blink {
+  0% {
+   color: #fff;
+  }
+  25% {
+   color: #fff;
+  }
+  50% {
+   color: #aa0000;
+  }
+  100% {
+    color: #fff;
+  }
+}
+
 body {
-/* font-size: 62.5%;*/
- font-family: Liberation Serif, Times;
- background: #ffffff;
- margin: 0;
- padding: 0;
- text-align: center;
+    background: none repeat scroll 0 0 #FFFFFF;
+    font-family: Sans Serif,Arial;
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
-
 #wrapper {
- margin: auto 0;
+    margin: 0;
+ padding: 0;
+ cursor:pointer;
 }
-#wrapper.warning {
- background: #ff0000;
-}
-
-#wrapper.warning #timer.playing {
- color: #ffffff;
-}
-
-#wrapper.warning #timer.ohshit {
- -webkit-animation-name: blink;
- -webkit-animation-duration: 1s;
- -webkit-animation-iteration-count: infinite;
- -webkit-animation-timing-function: linear;
+#wrapper.warning{
+    background: none repeat scroll 0 0 #E0981B;
+    height:100%;
 }
 
-#wrapper.warning #timer.paused {
- color: #0000aa;
- -webkit-animation-name: blink;
- -webkit-animation-duration: 1s;
- -webkit-animation-iteration-count: infinite;
- -webkit-animation-timing-function: linear;
+#wrapper.warning #timer.playing,#wrapper.ohshit #timer.playing {
+    color: #FFFFFF;
+}
+#wrapper.warning #timer.ohshit,#wrapper.ohshit #timer.ohshit {
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-name: blink;
+    animation-timing-function: linear;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-name: blink;
+    -webkit-animation-timing-function: linear;
+    background: none repeat scroll 0 0 #FF0000;
+}
+#wrapper.warning #timer.paused,#wrapper.ohshit #timer.paused {
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-name: blink;
+    animation-timing-function: linear;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-name: blink;
+    -webkit-animation-timing-function: linear;
+    color: #0000AA;
+}
+#wrapper.ohshit {
+    background: none repeat scroll 0 0 #FF0000;
+    height:100%;
 }
 
-#wrapper.warning #timer.stopped {
- color: #ffffff;
+#wrapper.warning #timer.stopped,#wrapper.ohshit #timer.stopped {
+    color: #FFFFFF;
 }
-
 #wrapper.ok #timer.playing {
- color: #00aa00;
+    color: #00AA00;
 }
-
 #wrapper.ok #timer.paused {
- color: #0000ff;
+    color: #0000FF;
 }
-
 #wrapper.ok #timer.stopped {
- color: #ff0000;
+    color: #FF0000;
 }
-
 #sound {
- display: none;
+    display: none;
 }
