--- a/timer.css
+++ b/timer.css
@@ -36,12 +36,13 @@ html,body {
 
 body {
     background: none repeat scroll 0 0 #FFFFFF;
-    font-family: Sans Serif,Arial;
+    font-family: 'Droid Sans Mono', sans-serif;
     margin: 0;
     padding: 0;
     text-align: center;
 }
 #wrapper {
+	display:block;
     margin: 0;
  padding: 0;
  cursor:pointer;
